--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>net.sf.jsefa</groupId>
+            <artifactId>jsefa</artifactId>
+            <version>1.1.0.RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>itextpdf</artifactId>
             <version>5.0.6</version>
